log/build_2025-02-20_00-10-20/me495_yolo/stderr.log
  File "/home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo/apriltag_detector.py", line 292
    ?###################
    ^
SyntaxError: invalid syntax

